--- a/addHike.html
+++ b/addHike.html
@@ -121,7 +121,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       <input type="text" class="form-control" id="link" placeholder="trailmap.example.com" maxlength=5>
     </div>
     <div class="form-group">
-      <label class="control-label">Select Hike Picture to Upload</label>
+      <label class="control-label">Upload a Hike Picture</label>
       <input type="filepicker" data-fp-apikey="AaAHhjU5IQR614wI3Nu1jz"
 onchange="alert(event.fpfile.url),logger(event.fpfile.url)">
     </div>
