moved filepicker button

--- a/addHike.html
+++ b/addHike.html
@@ -122,8 +122,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     </div>
     <div class="form-group">
       <label class="control-label">Upload a Hike Picture</label>
-      <input type="filepicker" data-fp-apikey="AaAHhjU5IQR614wI3Nu1jz"
-onchange="alert(event.fpfile.url),logger(event.fpfile.url)">
+      <div><input type="filepicker" data-fp-apikey="AaAHhjU5IQR614wI3Nu1jz"
+onchange="alert(event.fpfile.url),logger(event.fpfile.url)"></div>
+      
     </div>
     <div class="form-group">
        <label for="type">Type of Hike:</label>
