added warning for hike sign in page

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    </span><title>Join Hiker Today </title>
+    <title>Join Hiker Today </title>
     <link rel="shortcut icon" href="img/favicon.png" type="image/png">
     <!--<link rel="icon" href="../../favicon.ico">
 
@@ -56,7 +56,6 @@
                 $("#information2").addClass("has-error");
                 if (error=="Error: The specified email address is already in use.")
                 {
-                    console.log("blag");
                     $(".alert").show();
                 }
               } else {
