--- a/sign-in.html
+++ b/sign-in.html
@@ -68,6 +68,11 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 <label for="password">Password:</label>
                 <input type="password" maxlength="50" class="form-control" id="password" placeholder="password" required>
             </div>
+            <div class="alert alert-danger" role="alert">
+            <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+            <span class="sr-only">Error:</span>
+            The email or password you are using is incorrect 
+            </div>
             <!--<div class="form-group">
                 <label for="grade">Grade in class:</label>
                 <select class="form-control" id="grade">
@@ -110,7 +115,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 temp = queries[i].split('=');
                 params[temp[0]] = temp[1];
             }
-            console.log("dude");
+            //console.log("dude");
             console.log(params["username"]);
             userData = params["username"];
             //accessInfo(params["username"]);
@@ -130,6 +135,11 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             }, function(error, authData) {
               if (error) {
                 console.log("Login Failed!", error);
+                if (error=="Error: The specified password is incorrect.")
+                {
+                    console.log("djn");
+                    $(".alert").show();
+                }
               } else {
                 console.log("Authenticated successfully with payload:", authData);
                 logIn(authData.uid,username);
