--- a/addHike.html
+++ b/addHike.html
@@ -98,12 +98,12 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     </div>
     <div class="form-group">
       <label for="link">Hike Map Link</label>
-      <input type="text" class="form-control" id="link" placeholder="trailmap.example.com" maxlength=5>
+      <input type="text" class="form-control" id="link" placeholder="trailmap.example.com">
     </div>
     <div class="form-group">
       <label class="control-label">Upload a Hike Picture</label>
       <div><input type="filepicker" data-fp-apikey="AaAHhjU5IQR614wI3Nu1jz"
-onchange="alert(event.fpfile.url),logger(event.fpfile.url)"></div>
+onchange="logger(event.fpfile.url)"></div>
       
     </div>
     <div class="form-group">
